# vrender

./: .gitignore  CMakeLists.txt  README.md
assets/: scene.gltf
shaders/: mesh.vert
src/: VulkanEngine.cpp  VulkanEngine.h  camera.cpp  camera.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.cpp  vk_types.h
